--- a/src/components/navbar/sidenav/SideNav.module.css
+++ b/src/components/navbar/sidenav/SideNav.module.css
@@ -1,15 +1,32 @@
 .side-nav {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
   grid-area: sidenav;
   min-width: 200px;
+  height: auto;
   background-color: var(--color-white);
+}
+
+.side-nav > a {
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.logo-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.logo-container p {
+  font-weight: 600;
 }
 
 .side-nav img {
   height: 35px;
-  margin: 1rem 0;
+  margin: 1rem;
 }
 
 .side-nav ul {
