--- a/src/components/navbar/topnav/TopNav.module.css
+++ b/src/components/navbar/topnav/TopNav.module.css
@@ -1,4 +1,30 @@
 .top-nav {
   grid-area: topnav;
-  background-color: var(--color-secondary-light);
+  background-color: var(--color-white);
+  height: auto;
+  padding: 0.5rem 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.top-nav__controls {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  align-items: center;
+}
+
+.controls-user-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.controls-user-details img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
