--- a/src/components/navbar/sidenav/SideNav.module.css
+++ b/src/components/navbar/sidenav/SideNav.module.css
@@ -6,7 +6,9 @@
   grid-area: sidenav;
   min-width: 200px;
   height: auto;
-  background-color: var(--color-white);
+  background-color: var(--color-gray-light);
+  box-shadow: 2px 0 3px -2px rgba(0, 0, 0, 0.1);
+  z-index: 0;
 }
 
 .side-nav > a {
