(feat)workouts list page base layout and start with custom workout card checkbox logic. Needs bugfix.

--- a/src/components/card/CardParts.module.css
+++ b/src/components/card/CardParts.module.css
@@ -10,4 +10,7 @@
 
 .footer {
   padding: 0 0.5rem;
+  height: 100%;
+  flex: 1 0 auto;
+  /*  in de gaten houden in andere cards wat deze flex doet*/
 }
