--- a/src/components/inputField/InputField.module.css
+++ b/src/components/inputField/InputField.module.css
@@ -3,6 +3,7 @@
   position: relative;
   flex-direction: column;
   gap: 0.5rem;
+  width: 100%;
 }
 
 .input-field {
@@ -10,8 +11,9 @@
   border: 1px solid var(--color-black);
   border-radius: 0.3rem;
   outline: none;
-  padding: 0.5rem 1rem;
+  padding: var(--space-sm);
   background-color: transparent;
+  box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.1);
 }
 
 .input-field:focus {
