--- a/src/components/selectField/SelectField.module.css
+++ b/src/components/selectField/SelectField.module.css
@@ -1,11 +1,14 @@
 /* 100% width zorgt ervoor dat het select element 100% van de parent div pakt. De div controleert de width feitelijk*/
+
 select {
   width: 100%;
   padding: var(--space-sm);
-  border-radius: 0.3rem;
   cursor: pointer;
   outline: none;
-  border: 1px solid var(--color-gray-medium);
+  border: none;
+  border-bottom: 1px solid var(--color-black);
   color: var(--color-black);
+  background-color: transparent;
   box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.1);
+  appearance: none;
 }
