--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
   line-height: 1.5;
   font-family: "Inter", sans-serif;
   color: var(--color-black);
-  font-size: var(--font-base);
+  font-size: var(--font-sm);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
