(feat)minor general in workout builder, exercise list, workouts AND added react router basic NavLinks and router component

--- a/src/pages/workoutBuilder/WorkoutBuilder.module.css
+++ b/src/pages/workoutBuilder/WorkoutBuilder.module.css
@@ -23,11 +23,11 @@
   flex-direction: row;
 }
 
-.workout__table * {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-}
+/*.workout__table * {*/
+/*  margin: 0;*/
+/*  padding: 0;*/
+/*  font-weight: normal;*/
+/*}*/
 
 .workout__table {
   width: 100%;
@@ -56,4 +56,8 @@
 .exercise-not-found-error {
   color: var(--color-warning);
   font-weight: 500;
+  width: 175px;
+  text-align: center;
+  border-radius: 0.3rem;
+  text-wrap: nowrap;
 }
