--- a/src/components/dashboardCard/DashboardCard.module.css
+++ b/src/components/dashboardCard/DashboardCard.module.css
@@ -6,17 +6,17 @@
   flex-direction: column;
   border-radius: 0.3rem;
   padding: 1rem;
-  flex: 1;
+  height: 100%;
+  border: 1px solid var(--color-gray-mediumlight);
 }
 
-.dashboard-card h3 {
+.dashboard-card h4 {
   margin-bottom: 0.5rem;
 }
 
 .dashboard-card__content-container {
   display: flex;
-  gap: 1rem;
-  justify-content: space-between;
+  flex-grow: 1;
 }
 
 .direction-column {
