--- a/src/components/dashboardCard/DashboardCard.module.css
+++ b/src/components/dashboardCard/DashboardCard.module.css
@@ -10,8 +10,17 @@
   border: 1px solid var(--color-gray-mediumlight);
 }
 
-.dashboard-card h4 {
-  margin-bottom: 0.5rem;
+.dashboard-card__title-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title-container__icon {
+  color: var(--color-gray-dark);
+  padding: 0.5rem;
+  border: 1px solid var(--color-gray-mediumlight);
+  border-radius: 0.3rem;
 }
 
 .dashboard-card__content-container {
