--- a/src/components/smallCardDashContent/SmallCardDashContent.module.css
+++ b/src/components/smallCardDashContent/SmallCardDashContent.module.css
@@ -1,34 +1,31 @@
 .small-card__top-content {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-grow: 1;
   padding: 0.5rem 0;
+  gap: 0.5rem;
+  flex: 1;
 }
 
 .top-content__info {
   display: flex;
+  flex-direction: column;
+  flex-basis: 200px;
+  flex-grow: 1;
+  flex-shrink: 0;
+}
+
+.top-content__info div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
 }
 
-.top-content__info {
-  display: flex;
-  gap: 0.5rem;
-}
-
-.top-content__info > div p {
-  padding-right: 1rem;
+.top-content__info div p {
+  padding-right: 0.5rem;
 }
 
 .top-content__info > div span {
   font-weight: 600;
-}
-
-.info__icon {
-  color: var(--color-gray-dark);
-  padding: 0.5rem;
-  border: 1px solid var(--color-gray-mediumlight);
-  border-radius: 0.3rem;
 }
 
 .small-card__bottom-content {
