--- a/src/components/navbar/sidenav/SideNav.module.css
+++ b/src/components/navbar/sidenav/SideNav.module.css
@@ -4,11 +4,29 @@
   justify-content: space-between;
   align-items: center;
   grid-area: sidenav;
-  min-width: 200px;
   height: auto;
   background-color: var(--color-gray-light);
   box-shadow: 2px 0 3px -2px rgba(0, 0, 0, 0.1);
   z-index: 0;
+}
+
+.side-nav__top-controls {
+  position: relative;
+}
+
+.nav-toggle__wrapper {
+  position: absolute;
+  top: 75px;
+  right: -15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-toggle {
+  font-size: 2rem;
+  color: var(--color-primary);
+  cursor: pointer;
 }
 
 .side-nav > a {
@@ -29,6 +47,7 @@
 .side-nav img {
   height: 35px;
   margin: 1rem;
+  transform: rotateY(180deg);
 }
 
 .side-nav ul {
@@ -38,20 +57,28 @@
   align-items: flex-start;
   padding: 1rem;
   list-style: none;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .side-nav__link {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  padding: 0.5rem 1.5rem;
-  gap: 1rem;
+  padding: 0.5rem;
 }
 
-.side-nav__link span:first-child {
+.link__icon {
+  font-size: 1rem;
+  height: 30px;
   width: 30px;
-  font-size: 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.link__nav-label {
+  margin-left: 1rem;
+  white-space: nowrap;
+  text-transform: capitalize;
 }
 
 .side-nav__nav-links a {
@@ -59,6 +86,52 @@
 }
 
 .side-nav__link:hover {
-  background-color: var(--color-primary-light);
-  border-radius: 2rem;
+  color: var(--color-primary);
+}
+
+.side-nav__sign-out {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.side-nav__sign-out > :first-child {
+  font-size: 1rem;
+}
+
+/* Collapsed desktop nav styling voor toggle */
+
+.collapsed {
+  width: 75px;
+}
+
+.collapsed .logo-container p,
+.collapsed .link__nav-label {
+  display: none;
+}
+
+.collapsed .side-nav__sign-out span {
+  display: none;
+}
+
+/* Media Queries*/
+
+@media (max-width: 768px) {
+  .side-nav {
+    width: 75px;
+  }
+
+  .logo-container p,
+  .link__nav-label {
+    display: none;
+  }
+
+  .nav-toggle__wrapper {
+    right: -15px;
+  }
+
+  .side-nav__sign-out span {
+    display: none;
+  }
 }
