--- a/src/components/dashboardCard/DashboardCard.module.css
+++ b/src/components/dashboardCard/DashboardCard.module.css
@@ -8,6 +8,7 @@
   padding: 1rem;
   height: 100%;
   border: 1px solid var(--color-gray-mediumlight);
+  overflow-y: scroll;
 }
 
 .dashboard-card__title-container {
