--- a/src/components/clientWorkoutStatusCard/ClientWorkoutStatusCard.module.css
+++ b/src/components/clientWorkoutStatusCard/ClientWorkoutStatusCard.module.css
@@ -6,8 +6,8 @@
 }
 
 .client-list__client-info img {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
   object-fit: cover;
   border-radius: 100%;
   flex-shrink: 0;
@@ -15,6 +15,11 @@
 
 .client-list__client-name {
   font-weight: 600;
+  cursor: pointer;
+}
+
+.client-list__client-name:hover {
+  color: var(--color-primary);
 }
 
 .workout-info--done {
