--- a/src/index.css
+++ b/src/index.css
@@ -156,4 +156,7 @@ h4 {
   --space-lg: 1.5rem; /* 24px */
   --space-xl: 2rem; /* 32px */
   --space-2xl: 3rem; /* 48px */
+
+  /* Shadows */
+  --element-shadow-subtle: 0 2px 4px -2px rgba(0, 0, 0, 0.1);
 }
