--- a/src/components/inputField/InputField.module.css
+++ b/src/components/inputField/InputField.module.css
@@ -1,18 +1,10 @@
-.input-container {
-  display: flex;
-  position: relative;
-  width: 100%;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
 .input-field {
   width: 100%;
-  border: 1px solid var(--color-black);
+  border: 1px solid var(--color-gray-dark);
   border-radius: 0.3rem;
   outline: none;
   padding: var(--space-sm);
-  background-color: transparent;
+  background-color: var(--color-white);
   box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.1);
 }
 
@@ -33,6 +25,11 @@
 
 .input-field-icon:hover {
   color: var(--color-primary);
+}
+
+.required {
+  color: var(--color-primary);
+  margin-left: 0.3rem;
 }
 
 /* Sizes en styles */
