--- a/src/components/selectField/SelectField.module.css
+++ b/src/components/selectField/SelectField.module.css
@@ -2,13 +2,24 @@
 
 select {
   width: 100%;
-  padding: var(--space-sm);
-  cursor: pointer;
+  border: 1px solid var(--color-gray-dark);
+  border-radius: 0.3rem;
   outline: none;
-  border: none;
-  border-bottom: 1px solid var(--color-black);
-  color: var(--color-black);
-  background-color: transparent;
+  padding: var(--space-sm);
+  background-color: var(--color-white);
   box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.1);
-  appearance: none;
+}
+
+.select:focus {
+  box-shadow: 0 0 0 2px hsla(342, 100%, 62%, 0.3);
+}
+
+.select-wrapper {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.required {
+  color: var(--color-primary);
+  margin-left: 0.3rem;
 }
