--- a/src/pages/createExercisePage/CreateExercisePage.module.css
+++ b/src/pages/createExercisePage/CreateExercisePage.module.css
@@ -1,29 +1,99 @@
 .create-exercise__container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  max-height: 700px;
   width: 100%;
-}
-
-.container__title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 2rem;
+  max-width: 1200px;
 }
 
 .create-exercise-form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
 }
 
 .form__wrapper {
   display: flex;
   flex-direction: row;
-  max-width: 500px;
+  width: 100%;
 }
 
-iframe {
+.create-exercise__iframe {
   aspect-ratio: 16 / 9;
   width: 100% !important;
+  background-color: var(--color-gray-mediumlight);
+  border-radius: 0.3rem;
+  border: 3px solid var(--color-gray-mediumlight);
+}
+
+.container__layout {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 2rem;
+  flex: 1;
+}
+
+.container__selected-items {
+  flex: 1 1 350px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 1rem;
+  width: 100%;
+}
+
+.container__selected-items > p {
+  font-weight: 600;
+}
+
+.selected-muscles__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.selected-muscles__list li {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.selected-muscles__list > li :first-child {
+  color: var(--color-primary);
+  font-size: 1rem;
+}
+
+.selected-muscles__list > li :first-child:hover {
+  color: var(--color-primary-light);
+  cursor: pointer;
+}
+
+textarea {
+  width: 100%;
+  border: 1px solid var(--color-gray-dark);
+  border-radius: 0.3rem;
+  outline: none;
+  padding: var(--space-sm);
+  background-color: var(--color-white);
+  box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.1);
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .create-exercise__container {
+    max-height: 100%;
+  }
+  .container__layout {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
 }
