--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -10,7 +10,7 @@
 
 .primary {
   background-color: var(--color-primary);
-  color: var(--color-white);
+  color: #ffffff;
 }
 
 .primary:hover {
@@ -19,7 +19,7 @@
 
 .secondary {
   background-color: var(--color-black);
-  color: var(--color-white);
+  color: #ffffff;
 }
 
 .secondary:hover {
