(fix/feat) fix card css layout issues and input components layout issues. Mainly at clients and workouts page. Started base layout for profile page

--- a/src/components/inputField/InputField.module.css
+++ b/src/components/inputField/InputField.module.css
@@ -12,6 +12,10 @@
   box-shadow: 0 0 0 2px hsla(342, 100%, 62%, 0.3);
 }
 
+.input-field-container {
+  position: relative;
+}
+
 .input-field-icon {
   position: absolute;
   color: var(--color-black);
