--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,26 +1,29 @@
 .card {
   padding: 1rem 3rem;
   background-color: var(--color-gray-light);
-  flex: 1 1 100%;
-  height: auto;
+  flex-grow: 1;
+  flex-shrink: 1;
   border-radius: 0.5rem;
   box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.1);
   border: 0.5px solid var(--color-gray-medium);
-}
-
-.card:hover {
-  background-color: var(--color-gray-mediumlight);
+  gap: 1rem;
 }
 
 .horizontal {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  flex-wrap: wrap;
 }
 
 .vertical {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .small {
