--- a/src/components/card/CardParts.module.css
+++ b/src/components/card/CardParts.module.css
@@ -1,16 +1,19 @@
 .header {
-  flex: 1 0 200px;
+  flex: 1;
   padding: 0 0.5rem;
+  align-content: center;
 }
 
 .content {
-  flex: 2 0 200px;
+  flex: 2;
+  align-content: center;
   padding: 0 0.5rem;
 }
 
 .footer {
+  display: flex;
+  align-content: center;
   padding: 0 0.5rem;
-  height: 100%;
-  flex: 1 0 auto;
+  flex: 0;
   /*  in de gaten houden in andere cards wat deze flex doet*/
 }
