--- a/src/components/inputWrapper/InputWrapper.module.css
+++ b/src/components/inputWrapper/InputWrapper.module.css
@@ -3,6 +3,7 @@
   position: relative;
   gap: 0.5rem;
   justify-content: center;
+  min-width: 150px;
   /*  twijfel of hier flex: 1 nodig is, nog uitzoeken */
 }
 
