--- a/src/layouts/Layout.module.css
+++ b/src/layouts/Layout.module.css
@@ -23,3 +23,8 @@ In de main komt een component die zelf nog een grid (bijv 12 stuks) of flexbox h
 }
 
 /* Media Queries */
+@media (max-width: 768px) {
+  .layout {
+    height: auto;
+  }
+}
