(feat) finished profile page base layout and styles. to do: workout tabs as page components with routing

--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -31,6 +31,11 @@
   border: 2px solid var(--color-primary);
 }
 
+.success {
+  color: #ffffff;
+  background-color: var(--color-success);
+}
+
 .transparant {
   border: none;
   background-color: transparent;
