--- a/src/pages/clientProfile/ClientProfile.module.css
+++ b/src/pages/clientProfile/ClientProfile.module.css
@@ -1,4 +1,4 @@
-.profile-container {
+.profile-page {
   display: flex;
   flex-direction: column;
   min-width: 0;
@@ -6,52 +6,165 @@
   gap: 1rem;
 }
 
-.client-cards-container {
+.profile-page__container {
   display: flex;
   flex-direction: row;
-  flex: 1;
   gap: 2rem;
+  height: 100%;
 }
 
-.client-cards-container :nth-child(1) {
-  flex: 1 1 auto;
+.profile-page__container > :nth-child(1) {
+  flex: 1 1 400px;
 }
 
-.client-cards-container :nth-child(2) {
-  flex: 8 1 auto;
+.profile-page__container > :nth-child(2) {
+  flex: 2 1 auto;
 }
+/* Profile page stats (left) inner card styling */
 
-/* Inner cards container and styling */
-
-.inner-cards-container {
+.profile-page__card-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 100%;
+  gap: 1rem;
 }
 
-.profile__footer-controls {
+.profile-page__card-header {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  width: 100%;
+}
+
+.profile-page__user-details {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.profile-page__avatar-wrapper {
+  width: clamp(100px, 15vw, 160px);
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: var(--element-shadow-regular);
+}
+
+.user-avatar {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+/* profile page left side bottom content*/
+
+.profile-page__user-stats {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  align-items: stretch;
+  width: 100%;
+  padding: 0 1rem;
+}
+
+.statistic {
+  display: flex;
+  justify-content: space-between;
+}
+
+.statistic {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Profile page right card with user details and settings */
+
+.profile-page__settings-card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  gap: 1rem;
+}
+
+.profile-page__settings-navigation {
+  border-bottom: 1px solid var(--color-gray-medium);
+}
+.profile-page__settings-links {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  list-style: none;
+  margin: 0;
+  padding: 0.5rem;
+}
+
+.profile-page__settings-link {
+  font-weight: 600;
+  white-space: nowrap;
+}
+
+/* Profile page settings details and form */
+
+.profile-page__settings-details {
+  display: flex;
+}
+
+.profile-page__settings-form {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0.3rem;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.form-group {
+  flex: 0 1 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.gender-radio-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  align-items: center;
+}
+
+.gender-option {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+/* Profile page footer (below cards) */
+
+.profile-page__footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 0;
-}
-
-.profile-avatar-wrapper {
-  flex-basis: 300px;
-  flex-shrink: 1;
-  flex-grow: 0;
-}
-
-.profile-avatar {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 50%;
 }
 
 /* Media Queries */
 
 @media (max-width: 768px) {
-  .client-cards-container {
+  .profile-page__container {
+    display: flex;
     flex-direction: column;
+    gap: 2rem;
+    height: 100%;
   }
 }
