--- a/src/components/inputField/InputField.module.css
+++ b/src/components/inputField/InputField.module.css
@@ -1,7 +1,7 @@
 .input-field {
   width: 100%;
-  border: 1px solid var(--color-gray-dark);
-  border-radius: 0.3rem;
+  border: 1px solid var(--color-gray-medium);
+  border-radius: 0.2rem;
   outline: none;
   padding: var(--space-sm);
   background-color: var(--color-white);
