--- a/src/components/selectField/SelectField.module.css
+++ b/src/components/selectField/SelectField.module.css
@@ -2,8 +2,8 @@
 
 select {
   width: 100%;
-  border: 1px solid var(--color-gray-dark);
-  border-radius: 0.3rem;
+  border: 1px solid var(--color-gray-medium);
+  border-radius: 0.2rem;
   outline: none;
   padding: var(--space-sm);
   background-color: var(--color-white);
