--- a/src/components/snackbar/Snackbar.module.css
+++ b/src/components/snackbar/Snackbar.module.css
@@ -11,7 +11,7 @@
   flex-direction: row;
   justify-content: center;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%);
   top: 2rem;
   box-shadow: var(--element-shadow-regular);
   z-index: 9999;
