--- a/src/components/snackbar/Snackbar.module.css
+++ b/src/components/snackbar/Snackbar.module.css
@@ -5,7 +5,7 @@
   padding: 0.5rem 1rem;
   border-radius: 0.2rem;
   min-width: 300px;
-  max-width: 600px;
+  max-width: 500px;
   min-height: 50px;
   display: flex;
   flex-direction: row;
@@ -15,6 +15,7 @@
   top: 2rem;
   box-shadow: var(--element-shadow-regular);
   z-index: 9999;
+  white-space: wrap;
 }
 
 .snackbar__content {
@@ -23,6 +24,7 @@
   align-items: center;
   width: 100%;
   font-weight: 500;
+  gap: 1rem;
 }
 
 .snackbar__content > span {
