--- a/src/components/tableRow/TableRow.module.css
+++ b/src/components/tableRow/TableRow.module.css
@@ -11,7 +11,7 @@
 .table-row__icons > span {
   display: flex;
   gap: 2rem;
-  width: 1rem;
+  min-width: 1rem;
 }
 
 .table-row__icons > span > * {
@@ -20,6 +20,14 @@
 
 .table-row__icons > span > *:hover {
   color: var(--color-primary);
+}
+
+.exercise-parameter-input {
+  border: 1px solid var(--color-gray-mediumlight);
+  border-radius: 0.2rem;
+  width: 3rem;
+  padding: 0.2rem 0.4rem;
+  background-color: transparent;
 }
 
 @media (max-width: 768px) {
