--- a/src/components/tableRow/TableRow.module.css
+++ b/src/components/tableRow/TableRow.module.css
@@ -1,5 +1,10 @@
+.drag-icon {
+  padding: 0.5rem;
+}
+
 .drag-icon > span {
   width: 1rem;
+  height: 100%;
   display: block;
   cursor: pointer;
 }
