(feat)added functionality to build workout page: searching exercises, posting workouts and exercises, adding parameters and some minor styling fixes

--- a/src/pages/workoutBuilder/WorkoutBuilder.module.css
+++ b/src/pages/workoutBuilder/WorkoutBuilder.module.css
@@ -14,12 +14,18 @@
   gap: 1rem;
 }
 
-.workout-page__header :nth-child(1) {
+.search-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.workout-page__header > :nth-child(1) {
   display: flex;
   gap: 1rem;
 }
 
-.workout-page__header :nth-child(2) {
+.workout-page__header > :nth-child(2) {
   display: flex;
   gap: 1rem;
 }
