--- a/src/components/inputField/InputField.module.css
+++ b/src/components/inputField/InputField.module.css
@@ -5,7 +5,7 @@
   outline: none;
   padding: var(--space-sm);
   background-color: var(--color-white);
-  box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--element-shadow-subtle);
 }
 
 .input-field:focus {
