--- a/src/index.css
+++ b/src/index.css
@@ -197,7 +197,7 @@ tr:nth-of-type(2n) {
   --space-2xl: 3rem; /* 48px */
 
   /* Shadows */
-  --element-shadow-subtle: 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  --element-shadow-subtle: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
   --element-shadow-regular: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   --element-shadow-darker: 2px 4px 6px -1px rgba(0, 0, 0, 0.25);
 }
