--- a/src/components/loadingSpinner/LoadingSpinner.module.css
+++ b/src/components/loadingSpinner/LoadingSpinner.module.css
@@ -1,16 +1,15 @@
 .loading-spinner {
   position: fixed;
-  background-color: var(--color-accent);
+  background-color: var(--color-black);
   border-radius: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   top: 50%;
   z-index: 9999;
   padding: 1rem;
-  box-shadow: var(--element-shadow-regular);
 }
 
 .loading-spinner > * {
   color: var(--color-white);
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
