--- a/src/pages/exerciseList/ExerciseList.module.css
+++ b/src/pages/exerciseList/ExerciseList.module.css
@@ -49,7 +49,7 @@
 
   .exercise-list__icons > span {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
   }
 
