--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -3,7 +3,7 @@
   background-color: var(--color-gray-light);
   flex-grow: 1;
   flex-shrink: 1;
-  border-radius: 0.2rem;
+  border-radius: var(--border-radius-sm);
   box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.1);
   border: 0.5px solid var(--color-gray-medium);
   gap: 1rem;
