--- a/src/components/dashboardCard/DashboardCard.module.css
+++ b/src/components/dashboardCard/DashboardCard.module.css
@@ -5,10 +5,10 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  border-radius: 0.2rem;
+  border-radius: var(--border-radius-sm);
   height: 100%;
   overflow: auto;
-  padding: 1rem;
+  padding: var(--space-md);
   border: 1px solid var(--color-gray-mediumlight);
 }
 
@@ -22,7 +22,7 @@
   color: var(--color-gray-dark);
   padding: 0.5rem;
   border: 1px solid var(--color-gray-mediumlight);
-  border-radius: 0.2rem;
+  border-radius: var(--border-radius-sm);
 }
 
 .dashboard-card__content-container {
