--- a/src/components/filteredSearch/FilteredSearch.module.css
+++ b/src/components/filteredSearch/FilteredSearch.module.css
@@ -5,7 +5,7 @@
   background-color: var(--color-gray-light);
   max-width: 500px;
   min-width: 250px;
-  border-radius: 0.2rem;
+  border-radius: var(--border-radius-sm);
   border: 1px solid var(--color-gray-mediumlight);
   overflow: auto;
   z-index: 99;
