--- a/src/components/inputField/InputField.module.css
+++ b/src/components/inputField/InputField.module.css
@@ -1,15 +1,11 @@
 .input-field {
   width: 100%;
   border: 1px solid var(--color-gray-medium);
-  border-radius: 0.2rem;
+  border-radius: var(--border-radius-sm);
   outline: none;
   padding: var(--space-sm);
   background-color: var(--color-white);
   box-shadow: var(--element-shadow-subtle);
-}
-
-.input-field:focus {
-  box-shadow: 0 0 0 2px hsla(342, 100%, 62%, 0.3);
 }
 
 .input-field-container {
@@ -35,5 +31,3 @@
   color: var(--color-primary);
   margin-left: 0.3rem;
 }
-
-/* Sizes en styles */
