--- a/src/components/selectField/SelectField.module.css
+++ b/src/components/selectField/SelectField.module.css
@@ -3,15 +3,11 @@
 select {
   width: 100%;
   border: 1px solid var(--color-gray-medium);
-  border-radius: 0.2rem;
+  border-radius: var(--border-radius-sm);
   outline: none;
   padding: var(--space-sm);
   background-color: var(--color-white);
-  box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.1);
-}
-
-.select:focus {
-  box-shadow: 0 0 0 2px hsla(342, 100%, 62%, 0.3);
+  box-shadow: var(--element-shadow-subtle);
 }
 
 .select-wrapper {
