--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 /* MODERN CSS RESET (obv. Andy Bell en Josh W. Comeau)
  * https://github.com/hankchizljaw/modern-css-reset
@@ -36,7 +36,7 @@ ol[role="list"] {
 body {
   min-height: 100vh;
   line-height: 1.5;
-  font-family: "Inter", sans-serif;
+  font-family: "Lato", sans-serif;
   color: var(--color-black);
   font-size: var(--font-sm);
   -webkit-font-smoothing: antialiased;
@@ -104,24 +104,24 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Lato", sans-serif;
   line-height: 1.2;
 }
 
 h1 {
-  font-size: var(--font-3xl);
-}
-
-h2 {
   font-size: var(--font-2xl);
 }
 
-h3 {
+h2 {
   font-size: var(--font-xl);
 }
 
-h4 {
+h3 {
   font-size: var(--font-lg);
+}
+
+h4 {
+  font-size: var(--font-md);
 }
 
 /* ----------------- TABLES ----------------- */
@@ -137,8 +137,8 @@ table {
 
 thead {
   text-align: left;
-  background-color: var(--color-black);
-  color: #ffffff;
+  background-color: var(--color-gray-dark);
+  color: var(--color-white);
 }
 
 td,
@@ -167,26 +167,26 @@ tr:nth-of-type(2n) {
   --font-3xl: 2.5rem; /* 40px voor H1 */
 
   /* 2. Primary and secondary colors */
-  --color-primary: hsl(342 100 62);
-  --color-primary-light: hsl(342 100 82);
-  --color-primary-dark: hsl(342 100 42);
-  --color-secondary: hsl(162 100 38);
-  --color-secondary-light: hsl(162 100 58);
-  --color-secondary-dark: hsl(162 100 20);
+  --color-primary: hsl(342 92 56);
+  --color-primary-light: hsl(342 92 70);
+  --color-primary-dark: hsl(342 92 45);
+  --color-secondary: hsl(148 85 46);
+  --color-secondary-light: hsl(148 85 70);
+  --color-secondary-dark: hsl(148 85 45);
 
   /* 3. Grays */
-  --color-gray-light: hsl(162 3 96);
-  --color-gray-mediumlight: hsl(162 3 82);
-  --color-gray-medium: hsl(162 0 70);
-  --color-gray-dark: hsl(162 0 55);
-  --color-white: hsl(210 10 98);
-  --color-black: hsl(0 0 13);
+  --color-gray-light: hsl(228 18 96);
+  --color-gray-mediumlight: hsl(228 12 92);
+  --color-gray-medium: hsl(225 7 34);
+  --color-gray-dark: hsl(226 13 20);
+  --color-white: hsl(0 0 98);
+  --color-black: hsl(0 0 10);
 
   /* 4. Other */
-  --color-error: hsl(38 100 70);
-  --color-success: hsl(162 100 45);
-  --color-warning: hsl(342 100 62);
-  --color-accent: hsl(201 100 50);
+  --color-error: hsl(2 98 52);
+  --color-success: hsl(148 85 46);
+  --color-warning: hsl(45 98 55);
+  --color-accent: hsl(212 85 52);
 
   /* Spacing */
   --space-xs: 0.25rem; /* 4px */
@@ -200,4 +200,9 @@ tr:nth-of-type(2n) {
   --element-shadow-subtle: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
   --element-shadow-regular: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   --element-shadow-darker: 2px 4px 6px -1px rgba(0, 0, 0, 0.25);
+
+  /* Shadows */
+  --border-radius-sm: 0.3rem;
+  --border-radius-md: 0.6rem;
+  --border-radius-lg: 0.9rem;
 }
