--- a/src/layouts/Layout.module.css
+++ b/src/layouts/Layout.module.css
@@ -4,28 +4,32 @@ In de main komt een component die zelf nog een grid (bijv 12 stuks) of flexbox h
 */
 .layout {
   display: grid;
+  min-height: 0;
   height: 100vh;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto 1fr;
   grid-template-areas:
     "sidenav topnav"
     "sidenav main";
+  overflow: hidden;
 }
 
-/* Centreert de content container in het midden en geeft de child container van de content pagina mogelijkheid tot flex basis*/
+/* Centreert de content container in het midden en geeft de child container van de content pagina mogelijkheid tot flex basis etc*/
 .page-content-container {
+  grid-area: main;
   display: flex;
   flex-direction: row;
   justify-content: center;
   background-color: var(--color-white);
   overflow: auto;
-  padding: 1.25rem;
+  padding: var(--space-lg);
+  height: 100%;
 }
 
 /* Media Queries */
 @media (max-width: 768px) {
   .layout {
-    /*  Moet hier misschien nog wat qua styling voor hoogte/breedte*/
+    overflow: auto;
   }
   .page-content-container {
     overflow: visible;
