--- a/src/components/card/CardParts.module.css
+++ b/src/components/card/CardParts.module.css
@@ -1,19 +1,17 @@
 .header {
+  display: flex;
   flex: 1;
   padding: 0 0.5rem;
-  align-content: center;
 }
 
 .content {
-  flex: 2;
-  align-content: center;
+  display: flex;
+  flex: 3;
   padding: 0 0.5rem;
 }
 
 .footer {
   display: flex;
-  align-content: center;
   padding: 0 0.5rem;
-  flex: 0;
-  /*  in de gaten houden in andere cards wat deze flex doet*/
+  flex: 1;
 }
