--- a/src/pages/clientProfile/ClientProfile.module.css
+++ b/src/pages/clientProfile/ClientProfile.module.css
@@ -14,7 +14,7 @@
 }
 
 .profile-page__container > :nth-child(1) {
-  flex: 1 1 400px;
+  flex: 0 1 400px;
 }
 
 .profile-page__container > :nth-child(2) {
@@ -107,51 +107,17 @@
   white-space: nowrap;
 }
 
-/* Profile page settings details and form */
-
-.profile-page__settings-details {
-  display: flex;
-}
-
-.profile-page__settings-form {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  flex: 0 1 800px;
-  padding: 1rem;
-  border-radius: 0.3rem;
-  gap: 2rem;
-  flex-wrap: wrap;
-}
-
-.form-group {
-  flex: 1 1 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
-.gender-radio-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  align-items: center;
-}
-
-.gender-option {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  cursor: pointer;
-  white-space: nowrap;
-}
-
 /* Profile page footer (below cards) */
 
 .profile-page__footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+/* Active nav link styling */
+.activeNavLink {
+  color: var(--color-primary);
 }
 
 /* Media Queries */
