--- a/src/pages/clients/Clients.module.css
+++ b/src/pages/clients/Clients.module.css
@@ -18,14 +18,23 @@
   gap: 1rem;
 }
 
+.clients-page__card-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
 .clients-page__card-header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  flex: 1 0 200px;
   gap: 1rem;
-  flex-grow: 1;
-  flex-shrink: 1;
   min-width: 0;
+  width: 100%;
 }
 
 .clients-page__avatar-wrapper {
@@ -46,28 +55,34 @@
 .clients-page__card-details {
   font-size: 0.8rem;
   text-transform: capitalize;
-  flex: 1 1 auto;
 }
 
 .clients-page__card-details p:first-child {
   font-weight: 600;
 }
 
-.clients-page__card-training-info {
+.clients-page__card-content {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   gap: 0.5rem 1rem;
   font-size: 0.8rem;
+  width: 100%;
+  min-width: 0;
+  flex: 1 0 300px;
 }
 
-.clients-page__card-training-info span {
+.clients-page__card-content span {
   font-weight: 600;
   text-transform: capitalize;
 }
 
 .clients-page-footer {
-  align-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: stretch;
+  flex: 1 0 150px;
 }
 
 .high {
@@ -93,10 +108,19 @@
     flex-direction: column;
   }
 
+  .clients-page__card-container {
+    flex-direction: column;
+  }
+
   .clients-page__card-header {
-    flex-direction: row;
-    justify-content: space-between;
+  }
+
+  .clients-page__card-content {
     align-items: center;
-    gap: 2rem;
+    width: 100%;
+  }
+
+  .clients-page-footer {
+    align-items: stretch;
   }
 }
