--- a/src/components/loadingSpinner/LoadingSpinner.module.css
+++ b/src/components/loadingSpinner/LoadingSpinner.module.css
@@ -1,6 +1,6 @@
 .loading-spinner {
   position: fixed;
-  background-color: var(--color-black);
+  background-color: var(--color-gray-dark);
   border-radius: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
